kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pydaemon-server
  name: pydaemon-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pydaemon-server
  strategy: {}
  template:
    metadata:
      labels:
        app: pydaemon-server
    spec:
      containers:
      - image: marcelodevops/pydaemon-server
        name: pydaemon-server-container
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        resources: {}
status: {}
