kubernetes/basic-svc.yml
apiVersion: v1
kind: Service
metadata:
   name: pydaemon-server-service
spec:
   ports: 
     -  port: 80
        protocol: TCP
        targetPort: 8080
   selector: 
      app: pydaemon-server
      type: NodePort
