kubernetes/nginx-ingress-controller.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: pydaemon-ingress-svc
spec:
  rules:
  - host: kubex.com
    http:
      paths:
      - backend:
          serviceName: pydaemon-server-service
          servicePort: 8080
